--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "test_nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 777",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "classnames": "^2.3.2",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
-    "next": "13.4.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "typescript": "5.1.3"
-  },
-  "devDependencies": {
-    "sass": "^1.63.6"
-  }
+    "name": "test_nextjs",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start -p $PORT",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@types/node": "20.3.1",
+        "@types/react": "18.2.13",
+        "@types/react-dom": "18.2.6",
+        "classnames": "^2.3.2",
+        "eslint": "8.43.0",
+        "eslint-config-next": "13.4.6",
+        "next": "13.4.6",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-icons": "^4.10.1",
+        "typescript": "5.1.3"
+    },
+    "devDependencies": {
+        "sass": "^1.63.6"
+    }
 }
